wtx-macros/tests/ui/error_enum/unknown_data_format.rs
#[wtx_macros::pkg(api(Foo), data_format(fdsdfs))]
mod pkg {
  #[pkg::req_data]
  struct Req;

  #[pkg::res_data]
  struct Res;
}

fn main() {
}
